--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fullcalendar": "^5.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-google-calendar-api": "^1.5.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
