--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "final-project",
-  "homepage": "https://DinaSteinberg.github.io/BotoxBookings",
+  "homepage": "https://DinaSteinberg.github.io/BotoxBookings/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,8 +13,10 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "fullcalendar": "^5.11.0",
     "react": "^18.0.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
     "react-google-calendar-api": "^1.5.2",
     "react-router-dom": "^6.3.0",
@@ -46,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
